--- a/grief.html
+++ b/grief.html
@@ -105,7 +105,7 @@
 
   <div class="container">
     <div class="left">
-      <img src="images/grief.jpg" alt="T-shirt that says 'Everything Happens For A Reason'" />
+      <img src="images/grief.jpeg" alt="T-shirt that says 'Everything Happens For A Reason'" />
     </div>
     <div class="right">
       <div class="product-title">Everything Happens For A Reason T-Shirt</div>
